--- a/firmware/src/config.h.in
+++ b/firmware/src/config.h.in
@@ -1,3 +1,4 @@
+#define PROJECT_NAME "@PROJECT_NAME@"
 #define REVISION_MAJOR @REVISION_MAJOR@
 #define REVISION_MINOR @REVISION_MINOR@
 #cmakedefine DISABLE_PICO_LED
@@ -5,4 +6,3 @@
 #define DISPLAY_SHIFT_LEFT @DISPLAY_SHIFT_LEFT@
 #define DISPLAY_BRIGHTNESS @DISPLAY_BRIGHTNESS@
 #cmakedefine DBGPRINT
-
