--- a/firmware/src/CMakeLists.txt
+++ b/firmware/src/CMakeLists.txt
@@ -55,7 +55,7 @@ if (NOT DEFINED DISPLAY_BRIGHTNESS)
   set(DISPLAY_BRIGHTNESS 1)
 endif()
 
-set(CMAKE_CXX_FLAGS_RELEASE "-Os")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Werror ${EXTRA_DBG_FLAGS}")
 
 # rest of your project
