--- a/firmware/src/CMakeLists.txt
+++ b/firmware/src/CMakeLists.txt
@@ -48,6 +48,7 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 include_directories("${PICO_SDK_PATH}/src/common/pico_stdlib/include")
 include_directories("${PICO_SDK_PATH}/src/common/pico_base/include")
+include_directories("${PICO_SDK_PATH}/src/rp2_common/hardware_flash/include")
 include_directories("${PICO_SDK_PATH}/src/rp2_common/hardware_adc/include")
 include_directories("${PICO_SDK_PATH}/src/rp2_common/pico_multicore/include")
 include_directories("${PROJECT_BINARY_DIR}/") # for build/config.h
@@ -76,9 +77,10 @@ pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/Pwm.pio)
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_LIST_DIR}")
 
 set(LIBS
+  pico_multicore
   pico_stdlib
   hardware_adc
-  pico_multicore
+  hardware_flash
   hardware_pio
   )
 if (DEFINED PICO_TM1637_PATH)
